--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install discord.py Flask pytz random2 asyncio discord-py-menus datetime requests
+        pip install discord.py Flask pytz random2 asyncio menus datetime requests
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
