--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,5 +1,8 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
+
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+
+
 
 name: Python application
 
@@ -25,7 +28,7 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install pip --upgrade pip
         pip install discord.py Flask pytz random2 asyncio menus datetime requests
     - name: Lint with flake8
       run: |
